# DIS-onnxruntime-and-tensorrt-demo

./: README.md  demo_onnx.py  demo_trt.py  isnet.py  torch2onnx.py
cpp/: CMakeLists.txt  dis.cpp
